--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Naked Bytes</title>
     <div style="text-align: center; max-width: 650px; margin: 0 auto;">
         <div style="
