--- a/src/app/app.html
+++ b/src/app/app.html
@@ -61,7 +61,7 @@
         let titleTxt = promptTxt;
 
         if(titleTxt.length > 100){ titleTxt = titleTxt.slice(0, 100) + ' ...';}
-        
+
         const shareBtnEl = gradioEl.querySelector('#share-btn');
         const shareIconEl = gradioEl.querySelector('#share-btn-share-icon');
         const loadingIconEl = gradioEl.querySelector('#share-btn-loading-icon');
@@ -97,4 +97,7 @@
         shareIconEl.style.removeProperty('display');
         loadingIconEl.style.display = 'none';}
 </script>
+<svg id="share-btn-loading-icon" style="display:none;" class="animate-spin"
+   style="color: #ffffff; 
+"xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" fill="none" focusable="false" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><circle style="opacity: 0.25;" cx="12" cy="12" r="10" stroke="white" stroke-width="4"></circle><path style="opacity: 0.75;" fill="white" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
 </html>
