--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,7 @@
         </div>
         <div>
           <p style="align-items: center; margin-bottom: 7px;">
-            Inpainting <a href="https://huggingface.co/diffusers/stable-diffusion-xl-1.0-inpainting-0.1" target="_blank">Naked Bytes</a>, add a mask and text prompt for what you want to replace
+            Naked Bytes <a href="https://huggingface.co/diffusers/stable-diffusion-xl-1.0-inpainting-0.1" target="_blank">Naked Bytes</a>, add a mask and text prompt for what you want to replace
         </div>
       </div>
 </head>
