--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,17 +1,15 @@
-<div style="text-align: center; max-width: 650px; margin: 0 auto;">
+<div style="text-align: center; max-width: 748px; margin: 0 auto;">
   <div style="
         display: inline-flex;
         gap: 0.8rem;
         font-size: 1.75rem;
         justify-content: center;
-        margin-bottom: 10px;
+        top: 206pt;
+        height: 142pt;
+        background: #FFFFFF 0% 0% no-repeat padding-box;
       ">
-    <h1 style="font-weight: 900; align-items: center; margin-bottom: 7px; margin-top: 20px;">
-      Stable Diffusion XL Inpainting 🎨
+    <h1 style="font: normal normal bold 60px/71px SF Pro; align-items: center; margin-bottom: 7px; margin-top: 20px; color: #3B5998;">
+      Закрась одежду, которую ты хочешь убрать
     </h1>
-  </div>
-  <div>
-    <p style="align-items: center; margin-bottom: 7px;">
-      Demo for the <a href="https://huggingface.co/diffusers/stable-diffusion-xl-1.0-inpainting-0.1" target="_blank">Stable Diffusion XL Inpainting model</a>, add a mask and text prompt for what you want to replace
   </div>
 </div>
