--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,11 +1,11 @@
-<div style="text-align: center; max-width: 748px; margin: 0 auto;">
+<div style="text-align: center; max-width: 100%; margin: 0 auto;">
   <div style="
         display: inline-flex;
         gap: 0.8rem;
         font-size: 1.75rem;
         justify-content: center;
-        top: 206pt;
-        height: 142pt;
+        top: 206px;
+        height: 142px;
         background: #FFFFFF 0% 0% no-repeat padding-box;
       ">
     <h1 style="font: normal normal bold 60px/71px SF Pro; align-items: center; margin-bottom: 7px; margin-top: 20px; color: #3B5998;">
