--- a/src/app/style.css
+++ b/src/app/style.css
@@ -8,7 +8,7 @@
     background-color: #FFFFFF
 }
 .gradio-container {
-    width: 1100px !important
+    width: 100% !important
 }
 
 #main-container {
@@ -17,19 +17,21 @@
 
 #image_upload {
     align-items: center;
-    height: 490pt;
-    width: 798pt;
+    height: 100%;
+    width: 100%;
     background: transparent;
     background-color: transparent;
-    border: 5pt solid #3B5998;
-    border-radius: 25pt; 
+    border: 5px solid #3B5998;
+    border-radius: 25px; 
     opacity: 1;
-    margin-left: 140pt;
-    margin-right: 140pt;
-    margin-top: 116pt;
-    margin-bottom: 113pt;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 #run_button {
+    width: 385pt;
+    height: 140pt;
     text-align: left; 
     font: normal normal bold 66pt/79pt SF Pro;
     letter-spacing: 0pt; 
@@ -44,11 +46,33 @@
 }
 
 #image_up {
-    height: 100%;
-    width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 5%;
     background: transparent;
     background-color: transparent;
     border: none;
+}
+
+#image_up {min-height: 100%}
+#image_up [data-testid="image"], #image_up [data-testid="image"] > div{min-height: 100%}
+
+#but_2, #but_3 {
+    width: 379pt;
+    height: 114pt;
+    /* UI Properties */
+    text-align: center;
+    font: normal normal normal 29pt/35pt SF Pro;
+    letter-spacing: 0pt;
+    color: #FFFFFF;
+    background: #3B5998 0% 0% no-repeat padding-box;
+    box-shadow: 0pt 15pt 15pt #00000029;
+    border: 1pt solid #3B5998;
+    border-radius: 100pt;
+    opacity: 1;
+    margin-bottom: 70px;
+}
+
+#main-container {
+    height: 700px;
+    width: 700px;
 }
