--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,10 +1,10 @@
-<div style="text-align: center; max-width: 100%; margin: 0 auto;">
+<div style="text-align: center; max-width: 650px; margin: 0 auto;">
   <div style="
         display: inline-flex;
         gap: 0.8rem;
         font-size: 1 rem;
         justify-content: center;
-        top: 206px;
+        top: 150px;
         height: 142px;
         background: #FFFFFF 0% 0% no-repeat padding-box;
       ">
