--- a/src/app/style.css
+++ b/src/app/style.css
@@ -8,27 +8,13 @@
     background-color: #FFFFFF
 }
 .gradio-container {
-    width: 100% !important
+    width: 1100px !important
 }
 
 #main-container {
     align-items: center; 
 }
 
-#image_upload {
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    background: transparent;
-    background-color: transparent;
-    border: 5px solid #3B5998;
-    border-radius: 25px; 
-    opacity: 1;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
 #run_button {
     width: 385pt;
     height: 140pt;
@@ -53,8 +39,8 @@
     border: none;
 }
 
-#image_up {min-height: 100%}
-#image_up [data-testid="image"], #image_up [data-testid="image"] > div{min-height: 100%}
+#image_up {min-height: 400px}
+#image_up [data-testid="image"], #image_up [data-testid="image"] > div{min-height: 400px}
 
 #but_2, #but_3 {
     width: 379pt;
