--- a/src/app/style.css
+++ b/src/app/style.css
@@ -16,19 +16,18 @@
 }
 
 #run_button {
-    width: 385pt;
-    height: 140pt;
-    text-align: left; 
-    font: normal normal bold 66pt/79pt SF Pro;
-    letter-spacing: 0pt; 
-    color: #FFFFFF; 
-    opacity: 1;
-    margin-bottom: 20px; 
+    width: 180px;
+    height: 60px;
+    text-align: center;
+    font: normal normal normal 29px/35px SF Pro;
+    letter-spacing: 0pt;
+    color: #FFFFFF;
     background: #3B5998 0% 0% no-repeat padding-box;
-    box-shadow: 0pt 15pt 15pt #00000029;
-    border: 1pt solid #987A3B;
-    border-radius: 100pt;
-    opacity: 1; 
+    box-shadow: 0px 15px 15px #00000029;
+    border: 1px solid #3B5998;
+    border-radius: 20px;
+    opacity: 1;
+    margin-bottom: 70px;
 }
 
 #image_up {
@@ -43,17 +42,16 @@
 #image_up [data-testid="image"], #image_up [data-testid="image"] > div{min-height: 400px}
 
 #but_2, #but_3 {
-    width: 379pt;
-    height: 114pt;
-    /* UI Properties */
+    width: 180px;
+    height: 60px;
     text-align: center;
-    font: normal normal normal 29pt/35pt SF Pro;
+    font: normal normal normal 29px/35px SF Pro;
     letter-spacing: 0pt;
     color: #FFFFFF;
     background: #3B5998 0% 0% no-repeat padding-box;
-    box-shadow: 0pt 15pt 15pt #00000029;
-    border: 1pt solid #3B5998;
-    border-radius: 100pt;
+    box-shadow: 0px 15px 15px #00000029;
+    border: 1px solid #3B5998;
+    border-radius: 20px;
     opacity: 1;
     margin-bottom: 70px;
 }
