--- a/src/app/header.html
+++ b/src/app/header.html
@@ -4,11 +4,11 @@
         gap: 0.8rem;
         font-size: 1 rem;
         justify-content: center;
-        top: 150px;
+        top: 25px;
         height: 142px;
         background: #FFFFFF 0% 0% no-repeat padding-box;
       ">
-    <h1 style="font: normal normal bold 60px/71px SF Pro; align-items: center; margin-bottom: 7px; margin-top: 20px; color: #3B5998;">
+    <h1 style="font: normal normal bold 35px/42px SF-Pro; align-items: center; margin-bottom: 7px; margin-top: 10px; color: #3B5998;">
       Закрась одежду, которую ты хочешь убрать
     </h1>
   </div>
