--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'SF-Pro'; 
+    font-style: normal;
+    font-weight: 400;
+  src: url("SF-Pro.ttf");
+}
+/* @font-face {
+font-family: 'SF-Pro'; 
+    font-style: normal;
+    font-weight: 400;
+src: url("src/app/SF-Pro.ttf");
+} */
+h1 {
+   font-family: SF Pro
+}
+
 #total-container {
     align-content: center;
     width: auto;
@@ -8,7 +24,7 @@
     background-color: #FFFFFF
 }
 .gradio-container {
-    width: 1100px !important
+    width: 400px !important
 }
 
 #main-container {
@@ -28,6 +44,13 @@
     border-radius: 20px;
     opacity: 1;
     margin-bottom: 70px;
+}
+
+#image_upload {
+    min-height: 400px;
+    border: 5px solid #3B5998;
+    border-radius: 25px;
+    opacity: 1;
 }
 
 #image_up {
