--- a/src/app/header.html
+++ b/src/app/header.html
@@ -5,10 +5,10 @@
         font-size: 1 rem;
         justify-content: center;
         top: 25px;
-        height: 142px;
+        height: 110px;
         background: #FFFFFF 0% 0% no-repeat padding-box;
       ">
-    <h1 style="font: normal normal bold 35px/42px SF-Pro; align-items: center; margin-bottom: 7px; margin-top: 10px; color: #3B5998;">
+    <h1 style="font: normal normal bold 27px sans-serif; align-items: center; margin-bottom: 7px; margin-top: 10px; color: #3B5998;">
       Закрась одежду, которую ты хочешь убрать
     </h1>
   </div>
