--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,3 +1,9 @@
+<script>
+  let btn = document.getElementById("run_b");
+  btn.addEventListener("click", () => {
+    alert("Теперь можешьь вернуться в телеграм, скоро мы пришлем обраьотанное фото");
+  });
+</script>
 <div style="text-align: center; max-width: 650px; margin: 0 auto;">
   <div style="
         display: inline-flex;
