--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,6 +1,8 @@
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
   let btn = document.getElementById("run_b");
   btn.addEventListener("click", () => {
+    tg.close();
     alert("Теперь можешьь вернуться в телеграм, скоро мы пришлем обраьотанное фото");
   });
 </script>
