--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,5 +1,6 @@
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
+  let tg = window.Telegram.WebApp;
   let btn = document.getElementById("run_b");
   btn.addEventListener("click", () => {
     tg.close();
