--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,4 +1,4 @@
-<!-- <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
   let tg = window.Telegram.WebApp;
   let btn = document.getElementById("run_b");
@@ -6,7 +6,7 @@
     tg.close();
     alert("Теперь можешьь вернуться в телеграм, скоро мы пришлем обраьотанное фото");
   });
-</script> -->
+</script>
 <div style="text-align: center; max-width: 650px; margin: 0 auto;">
   <div style="
         display: inline-flex;
