--- a/src/app/header.html
+++ b/src/app/header.html
@@ -4,6 +4,7 @@
   let tg = window.Telegram.WebApp;
   let btn = document.getElementById("run_b");
   btn.addEventListener("click", () => {
+    console.log('*******************>')
     tg.close();
   });
 </script>
