--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,4 +1,9 @@
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script>
+  let tg = window.Telegram.WebApp;
+  tg.expand();
+  console.log('*******************>')
+</script>
 <div style="text-align: center; max-width: 650px; margin: 0 auto;">
   <div style="
         display: inline-flex;
