--- a/src/app/style.css
+++ b/src/app/style.css
@@ -79,11 +79,26 @@ h1 {
     }
 }
 
-#but_2, #but_3 {
+#but_2 {
     width: 180px;
     height: 60px;
     text-align: center;
-    font: normal normal normal 13px/18px sans-serif;
+    font: normal normal normal 29px/35px sans-serif;
+    letter-spacing: 0pt;
+    color: #FFFFFF;
+    background: #3B5998 0% 0% no-repeat padding-box;
+    box-shadow: 0px 15px 15px #00000029;
+    border: 1px solid #3B5998;
+    border-radius: 50px;
+    opacity: 1;
+    margin-bottom: 70px;
+}
+
+#but_3 {
+    width: 180px;
+    height: 60px;
+    text-align: center;
+    font: normal normal normal 19px/24px sans-serif;
     letter-spacing: 0pt;
     color: #FFFFFF;
     background: #3B5998 0% 0% no-repeat padding-box;
