--- a/src/app/style.css
+++ b/src/app/style.css
@@ -98,6 +98,7 @@ h1 {
     width: 180px;
     height: 60px;
     text-align: center;
+    padding-top: 5px;
     font: normal normal normal 19px/24px sans-serif;
     letter-spacing: 0pt;
     color: #FFFFFF;
