--- a/src/app/style.css
+++ b/src/app/style.css
@@ -117,7 +117,12 @@ h1 {
 
 footer {visibility: hidden}
 
-.button.svelte-1030q2h {
+button.svelte-1030q2h {
+    visibility: hidden;
+    display: none;
+}
+
+.svelte-1030q2h {
     visibility: hidden;
     display: none;
 }
